--- a/src/main/resources/static/student.html
+++ b/src/main/resources/static/student.html
@@ -2,9 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>用人单位登录</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<script>
+    // 假设你使用的是 Thymeleaf 或其他模板引擎来渲染 flash 属性
+    // 这里的代码取决于你实际如何传递和访问这个属性
+    var logoutSuccess = /*[[${logoutSuccess}]]*/ false; // 使用 Thymeleaf 语法示例
 
+    if (logoutSuccess) {
+        alert('用户已登出！');
+    }
+</script>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header">
+                    <h1 class="text-center">学生登录</h1>
+                </div>
+                <div class="card-body">
+                    <form action="/student/login" method="post">
+                        <div class="form-group">
+                            <label for="student_id">用户名：</label>
+                            <input type="text" class="form-control" id="student_id" name="student_id" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">密码：</label>
+                            <input type="password" class="form-control" id="password" name="password" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-block">Login</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
