--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html>
-<meta charset="UTF-8">
+<html lang="en">
 <head>
-    <title>登录</title>
-    <!-- 导入Bootstrap样式 -->
-    <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>选择登录身份</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+        }
+        .container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
@@ -16,11 +29,13 @@
                 <option value="admin">管理员</option>
                 <option value="employer">用人单位</option>
                 <option value="student">学生</option>
-                <option value="visitor">访客</option>
             </select>
         </div>
         <button type="submit" class="btn btn-primary">登录</button>
     </form>
+    <div class="mt-3">
+        <button onclick="window.location.href='/visitor'" class="btn btn-secondary">访客查看</button>
+    </div>
 </div>
 </body>
 </html>
