完成了Admin功能：审核用人单位

--- a/src/main/resources/static/employer.html
+++ b/src/main/resources/static/employer.html
@@ -24,8 +24,11 @@
                             <label for="password">密码：</label>
                             <input type="password" class="form-control" id="password" name="password" required>
                         </div>
-                        <button type="submit" class="btn btn-primary btn-block">Login</button>
+                        <button type="submit" class="btn btn-primary btn-block">登录</button>
                     </form>
+                    <div class="text-center mt-3">
+                        <a href="/employer/register" class="btn btn-secondary btn-block">注册</a>
+                    </div>
                 </div>
             </div>
         </div>
